-----------------
2017-??-?? 3.5.0
-----------------

* Backport the new subprocess.run() API from Python 3.5.
* Fix subprocess.Popen.wait() when the child process has exited to a
  a stopped instead of terminated state (ex: when under ptrace).
  https://bugs.python.org/issue29335 
* Fix a compilation issue regarding O_CLOEXEC not being defined on old
  Linux distros such as RHEL 5.

-----------------
2015-11-15 3.2.7
-----------------

* Issue #6973: When we know a subprocess.Popen process has died, do
  not allow the send_signal(), terminate(), or kill() methods to do
  anything as they could potentially signal a different process.
* Issue #23564: Fixed a partially broken sanity check in the _posixsubprocess
  internals regarding how fds_to_pass were passed to the child.  The bug had
  no actual impact as subprocess32.py already avoided it.

-----------------
2015-11-14 3.2.7rc2
-----------------

* Moved the repository from code.google.com to github.
* Added a _WAIT_TIMEOUT to satisfy the unsupported people entirely on
  their own trying to use this on Windows.
* Similarly: Updated setup.py to not build the extension on non-posix.

-----------------
2014-06-01 3.2.7rc1
-----------------

* Issue #21618: The subprocess module could fail to close open fds that were
  inherited by the calling process and already higher than POSIX resource
  limits would otherwise allow.  On systems with a functioning /proc/self/fd
  or /dev/fd interface the max is now ignored and all fds are closed.

-----------------
2014-04-23 3.2.6
-----------------

* Fixes issue #21291: Popen.wait() is now thread safe so that multiple
  threads may be calling wait() or poll() on a Popen instance at the same time
  without losing the Popen.returncode value.
* Fixes issue #14396: Handle the odd rare case of waitpid returning 0 when not
  expected in Popen.wait().
* Fixes issue #16962: Use getdents64 instead of the obsolete getdents syscall